[INTERNAL] ListItemBase: focus outline fix for highlight
When the highlight is set on the item, the focus outline of the item is
overlapped by the hightlight div. Hence, on focus of the item, the
hightlight div is position accordingly and width is reduced by 2px such
that the focus outline is visible on the all 4 sides for the list item.
Resolves:
BCP: 1980397581

--- a/src/sap.m/src/sap/m/themes/base/ListItemBase.less
+++ b/src/sap.m/src/sap/m/themes/base/ListItemBase.less
@@ -38,6 +38,14 @@
 	outline-offset: -2px;
 }
 
+/* makes the focus outline visible when hightlight is used */
+.sapMLIBFocusable:focus .sapMLIBHighlight {
+	width: 0.25rem;
+	left: 2px;
+	bottom: 1px;
+	top: 2px;
+}
+
 .sapMLIB:not(.sapMLIBFocusable):focus,
 .sapMListTblSubRow:focus {
 	outline: none;
